v10.4.0/_sources/generated/pcdsdevices.lasers.rfof.CycleRfofRx.rst.txt
pcdsdevices.lasers.rfof.CycleRfofRx
===================================

.. currentmodule:: pcdsdevices.lasers.rfof

.. autoclass:: CycleRfofRx

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - rf_temperature
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:RFTEMPERATURE``
          - 
          - normal
          - 
    
        * - rf_power
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:RFPOWER``
          - 
          - normal
          - 
    
        * - optical_power
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPTICALPOWER``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: subscriptions
    
    